2008-03-13  kitone  <kitone@gna.org>

	* share/glade/subtitleeditor.glade:
	* src/Makefile.am:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	* src/gui/WaveformSystem.cc:
	* src/gui/WaveformSystem.h:
	Remove WaveformSystem.

2008-03-01  kitone  <kitone@gna.org>

	* src/Document.cc:
	Small fix (finish_command)

2008-02-13  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-02-12  kitone  <kitone@gna.org>

	* src/actions/ViewManager.cc:
	Small improvements in View Manager like sensitive.

2008-02-12  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/actions/ViewModes.cc:
	Rename ViewModes.cc by ViewManager.cc

2008-02-12  kitone  <kitone@gna.org>

	* share/glade/Makefile.am:
	* share/glade/dialog-view-manager.glade:
	Add glade file.

	* share/menubar.xml:
	Rename "setting-view-placeholder" by "view-manager-placeholder".

	* src/SubtitleView.cc:
	Rename "columns" by "columns-displayed".

	* src/actions/ViewModes.cc:
	Add "View Manager" interface for settings.
	Rename ViewModesPlugin by ViewManagerPlugin.
	Rename "setting-view" by "view-manager".
	Rename "columns" by "columns-displayed"

	* src/main.cc:
	Remove: "columns", "show-column-*".
	Add: "columns-list", "columns-displayed".

2008-02-11  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	Make scrollable.

2008-02-11  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Makefile.am:
	* src/actions/ViewModes.cc:
	Adding a new view modes in the form of a plugin (ViewModes.cc).
	This plugin support user settings.

2008-02-11  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	Removes the managing of the view modes (simple, advanced...) and 
	the columns (show-columns-*) of the code. The columns displayed are 
	updated simply by listing the configuration.
	The drag-and-drop of the columns has been disable.

2008-02-11  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/gui/MenuBar.cc:
	* src/gui/MenuBar.h:
	Removes the managing of the view modes and columns.
